kubernetes/apps/networking/traefik-forward-auth/app/service.yaml
---
#
# Auth Service
#
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: traefik-forward-auth
      port: 4181
      targetPort: 4181
