kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: networking
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "auth-${SECRET_DOMAIN/./-}-tls"
