kubernetes/apps/networking/traefik-forward-auth/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns/is-public: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: traefik-forward-auth
  namespace: networking
spec:
  ingressClassName: "traefik"
  rules:
    - host: "auth.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 4181
    - host: "*.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /_oauth
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 80
  tls:
    - hosts:
        - auth.${SECRET_DOMAIN}
      secretName: auth-${SECRET_DOMAIN}-tls
